fix: corrected search bar misalignement, add IIFE

--- a/style.css
+++ b/style.css
@@ -177,6 +177,7 @@ ul > * {
   /* background-color: blue; */
   /* padding: 8px 10px; */
   width: 350px;
+  padding: 0px;
 }
 
 .search-bar {
